# HydraFlow

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
conf/: config.yaml
conf/adapter/: default.yaml
conf/augmentation/: default.yaml
conf/eval/: default.yaml
conf/inference/: default.yaml
conf/model/: default.yaml
conf/model/inference_network/: diffusion.yaml  flow_matching.yaml
conf/model/summary_network/: deep_set.yaml  set_transformer.yaml  time_series_transformer.yaml
conf/preprocessing/: default.yaml
conf/simulator/: skeleton.yaml  two_moons.yaml
conf/training/: default.yaml
conf/tuning/: default.yaml
docs/: bring_your_own_data.md  end_to_end_guide.md  hyperparameter_tuning.md  two_moons_pipeline.md
graphify-out/: .graphify_labels.json  GRAPH_REPORT.md  graph.html  graph.json  manifest.json
graphify-out/2026-06-07/: .graphify_labels.json  GRAPH_REPORT.md  graph.json  manifest.json
graphify-out/cache/: stat-index.json
notebooks/: explore.py
scripts/: evaluate.py  evaluate_real.py  simulate.py  train.py  tune.py
src/hydrabflow/: __init__.py
src/hydrabflow/augmentation/: __init__.py  examples.py  registry.py
src/hydrabflow/config/: __init__.py  schema.py
src/hydrabflow/networks/: __init__.py
src/hydrabflow/pipeline/: _app.py  checkpoint.py  evaluate.py  evaluate_real.py  io.py  simulate.py  train.py  tune.py  workflow.py
src/hydrabflow/preprocessing/: __init__.py  registry.py  (+2 more)
src/hydraflow/: __init__.py
tests/: conftest.py  test_augmentation.py  test_config.py  test_preprocessing.py  test_registries.py  test_workflow.py
(+38 files in other folders)
