[project]
name = "hydraflow"
version = "0.1.0"
description = "Reusable cookiecutter template for BayesFlow + Hydra simulation-based inference (SBI) pipelines."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Giuseppe Viterbo", email = "viterbogiuseppe99@gmail.com" }]
dependencies = [
    "bayesflow>=2.0",
    "keras>=3.5",
    "jax>=0.4.30",
    "hydra-core>=1.3",
    "omegaconf>=2.3",
    "optuna>=3.6",
    "numpy>=1.26",
    "matplotlib>=3.8",
    "marimo>=0.9",
    "tqdm>=4.66",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.6"]

# Console entry points mirror the scripts/ Hydra apps.
[project.scripts]
hydraflow-simulate = "hydraflow.pipeline.simulate:cli"
hydraflow-train = "hydraflow.pipeline.train:cli"
hydraflow-evaluate = "hydraflow.pipeline.evaluate:cli"
hydraflow-evaluate-real = "hydraflow.pipeline.evaluate_real:cli"
hydraflow-tune = "hydraflow.pipeline.tune:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hydraflow"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
